<resources>
    <string name="app_name">MalwareDetector</string>
    <string name="malwareMonitor"> My Malware Monitor!</string>
    <string name="action_settings">Settings</string>
    <string name="processes">Processes</string>
    <string name="systemInfos">SystemInfos</string>
    <string name="cpufreq">Refresh Time CPU Infos </string>
    <string name="procFreq">Refresh Time Process List</string>
    <string name="ramFreq">Refresh Time RAM Infos</string>
    <string name="battFreq">Refresh Time BATT Infos</string>
    <string name="enableDevMon">Device Monitor</string>
    <string name="chooseResMonFreq">Monitor Frequency (s)</string>
    <string name="processes_list">Processes</string>
    <string name="enableSysCallsStats">System Calls Statistics</string>
    <string name="enableDbHandler">Database Handler</string>
    <string name="enableSysCallsMon">System Calls Monitor</string>
    <string name="selectServices">Modules</string>
    <string name="enableMalwareMon">Malware Monitor</string>
    <string name="enableMonAllProc">Monitor All Processes</string>
    <string name="enableCpuMon">Update Cpu Usage</string>
    <string name="enableDisplayMon">Update Display Usage</string>
    <string name="enableBattMon">Update Battery Usage</string>
    <string name="enableRamMon">Update RAM Usage</string>
    <string name="enableProcMon">Update Process List</string>
    <string name="uiFreq">UI refresh time</string>
    <string name="cpuInfos">cpuInfos</string>
    <string name="cpuModelAndFreq">cpuModelAndFreq</string>
    <string name="numCpu">numCpu</string>
    <string name="ramInfos">ramInfos</string>
    <string name="totalRam">totalRam</string>
    <string name="freeRam">freeRam</string>
    <string name="battInfos">battInfos</string>
    <string name="battCharging">battCharging</string>
    <string name="battPerc">battPerc</string>
    <string name="generalInfos">generalInfos</string>
    <string name="devRoot">devRoot</string>
    <string name="devRooted">Device rooted</string>
    <string name="nodevRooted">Device not rooted</string>
    <string name="rootDeviceNeeded">( Rooted device needed! Due Android security policies, only this application will be traced by strace. )</string>
    <string name="loading_data">Loading data…</string>
    <string name="save_to_file">save db to file</string>
    <string name="save_failed">Failed to save the database in file.</string>
    <string name="db_not_enabled">The database service must be enabled.</string>
    <string name="save_success">File saved with success.</string>
    <string name="enableSysAppsMon">Enable System Apps Monitoring</string>
    <string name="saving_option">Do you want to delete the statistics data after reading?</string>
    <string name="save_with_del">Yes</string>
    <string name="save_with_no_del">No, keep data</string>
    <string name="cancel">Cancel</string>
    <string name="procMonNotEnabled">Nothing to show! The device monitor is disabled.</string>
    <string name="othersSettingsLabel">Generic Settings</string>
    <string name="mountDbInExternalStorage">Mount Database in external storage</string>
    <string name="adsEnablingMountFlag">Do not neither remove the external storage nor mount it to the pc while the Db service is active</string>
    <string name="dumpTimeRes">Db Dump Resolution Time</string>
    <string name="title_activity_monitor">MonitorActivity</string>

</resources>
