<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enableMonAllProc"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/enableMonAllProc" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/enableProcMon"
        android:id="@+id/enableProcMon" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/enableSysAppsMon"
        android:id="@+id/enableSysAppsMon" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/enableCpuMon"
        android:id="@+id/enableCpuMon" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/enableRamMon"
        android:id="@+id/enableRamMon" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/enableDisplayMon"
        android:id="@+id/enableDisplayMon" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/enableBattMon"
        android:id="@+id/enableBattMon" />

</merge>