<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/selectServices"
            android:id="@+id/selectServices"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enableDevMon"
            android:id="@+id/enableDevMon"
            android:textAppearance="?android:attr/textAppearanceSmall"
            />
        <LinearLayout
            android:id="@+id/viewGroup"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:layout_marginLeft="30dp"
            android:visibility="gone"
            >
            <include layout="@layout/proc_mon_checkboxes"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation = "vertical"
            >
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enableSysCallsMon"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/enableSysCallsMon"
                />
            <TextView
                android:textSize="9sp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:id="@+id/labelNoRoot"
                android:layout_marginLeft="5dp"
                android:text="@string/rootDeviceNeeded"
                android:textStyle="bold|italic"
                android:textColor="#ffff0000" />
        </LinearLayout>


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/enableDbHandler"
            android:id="@+id/enableDbHandler" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/enableSysCallsStats"
            android:id="@+id/enableSysCallsStats" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/enableMalwareMon"
            android:id="@+id/enableMalwareMon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/chooseResMonFreq"
            android:id="@+id/chooseResMonLabel"
            android:layout_marginTop="20dp"
            />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/uiFreq"
                android:id="@+id/uiFreq"
                android:textAlignment="center"
                android:singleLine="true"
                android:gravity="center_vertical"
                />

            <EditText
                android:gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:layout_marginRight="10dp"
                android:id="@+id/rfrUiFreq" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="-5dp"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/cpufreq"
                android:id="@+id/cpuFreq"
                android:gravity="center_vertical"
                android:singleLine="true" />

            <EditText
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/rfrCpuFreq"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="-5dp"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/procFreq"
                android:id="@+id/memFreq"
                android:gravity="center_vertical"
                android:singleLine="true" />

            <EditText
                android:layout_width="70dp"
                android:layout_marginRight="10dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/rfrProcFreq" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="-5dp"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/ramFreq"
                android:id="@+id/ramFreq"
                android:gravity="center_vertical"
                android:singleLine="true" />

            <EditText
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/rfrRamFreq" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="-5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/battFreq"
                android:id="@+id/battFreq"
                android:textAlignment="center"
                android:gravity="center_vertical"
                android:singleLine="true"
                />

            <EditText
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginRight="10dp"
                android:id="@+id/rfrBattFreq" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/othersSettingsLabel"
            android:id="@+id/othersSettingsLabel"
            android:layout_marginTop="20dp"
            />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="-5dp"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/dumpTimeRes"
                android:id="@+id/dumpTimeRes"
                android:gravity="center_vertical"
                android:singleLine="true" />

            <EditText
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/dumpTimeResVal" />
        </LinearLayout>


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/mountDbInExternalStorage"
            android:id="@+id/mountDbInExternalStorage" />

        <TextView
            android:textSize="9sp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:id="@+id/adsEnablingMountFlag"
            android:layout_marginLeft="10dp"
            android:text="@string/adsEnablingMountFlag"
            android:textStyle="bold|italic"
            android:textColor="#ffff0000" />
    </LinearLayout>
</ScrollView>
