<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    >
    <LinearLayout
        android:id="@+id/actionBar"
        android:background="@color/grey"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_save"
            android:contentDescription="@string/save_to_file" />
        <ImageButton
            android:id="@+id/btnSave1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10sp"
            android:background="@color/abc_search_url_text_normal"
            android:src="@android:drawable/ic_menu_save"
            android:contentDescription="@string/save_to_file" />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/busyProgressProc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_centerInParent="true">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/loading_data" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/procMonNotEnabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_centerInParent="true">
        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/procMonNotEnabled" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/listviewLayout"
        android:orientation="vertical"
        android:layout_below="@id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ListView
            android:id="@id/android:list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:drawSelectorOnTop="false"/>

    </LinearLayout>
</RelativeLayout>

